[metadata]
name = shos
version = 1.0
author = Patrik Tukacs
description = MQTT device connector to Modbus and CAN for Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = src